# jetfuelburn

./: .gitignore  .readthedocs.yaml  CHANGES.md  CITATION.cff  CONTRIBUTING.MD  LICENSE  LICENSE.txt  README.md  jetfuelburn_reducedorder_candidates.md  mkdocs.yaml  pyproject.toml  verify_ofp.py  zensical.toml
.github/workflows/: black.yml  coverage.yml  draft-pdf.yml  publish-to-test-pypi.yml  publish.yml  publish_pypi.yml  publish_testpypi.yml  test.yml  test_package.yml  update_license.yml
dev/csfm_benchmarking/: model_comparison.ipynb
dev/homepage/: airbus_fuel_burn.csv  airbus_fuel_burn.py  usdot_fuel_burn.csv  usdot_fuel_burn.py
dev/lee_etal_benchmarking/: lee_etal_benchmarking.py
dev/mapping/: mapping.ipynb
dev/ozempic/: ozempic.ipynb
dev/poll_etal_implementation/: PS_Trajector_(beta_version)_171024.xlsx
dev/pyodide/: test.py
dev/usdot_benchmarking/: bts_t100_departures.ipynb  distance_sweep.py  distance_sweep_results.csv  model_benchmarking.ipynb  model_comparison.ipynb  ozempic_savings.ipynb  usdot_benchmarking.ipynb  usdot_benchmarking.py
dev/usdot_processing/: usdot_processing.py
docs/: README.md  _requirements.txt  about.md  api.md  changelog.md  comparison.md  conf.py  diagrams.md  environment.yaml  faq.md  index.md  installation.md  physical_units.md  requirements.txt  tutorial.ipynb
docs/_css/: extra.css
jetfuelburn/: __init__.py  allocation.py  averages.py  breguet.py  closedform.py  combined.py  diagrams.py  reducedorder.py  statistics.py
joss/: paper.bib  paper.md
tests/: test_aerodynamics.py  test_allocation.py  test_averages.py  test_breguet.py  test_code.py  test_combined.py  test_diagrams.py  test_engines.py  test_flightprofile.py  test_geography.py  test_imports.py  test_mapping.py  test_math.py  test_mathematics.py  test_ofp.py  test_ofp_climb_descent.py  test_physics.py  test_rangeequation.py  test_reducedorder.py  test_statistics.py  test_tests.py
(+147 files in other folders)
