[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetfuelburn"
authors = [
  { name="Michael Weinold", email="michaelphilippweinold+jetfuelburn@gmail.com" }
]
maintainers = [
  { name="Michael Weinold", email="michaelphilippweinold+jetfuelburn@gmail.com" }
]
description = "A Python package for calculating fuel burn of commercial aircraft."
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "pint",
]

[project.urls]
source = "https://github.com/sustainableaviation/jetfuelburn"
homepage = "https://jetfuelburn.readthedocs.io"
tracker = "https://github.com/sustainableaviation/jetfuelburn/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "pytest",
    "pytest-cov",
    "python-coveralls",
]

[tool.setuptools]
include-package-data = true
packages = [
    "jetfuelburn",
    "jetfuelburn.aux",
    "jetfuelburn.data"
]

[tool.setuptools.package-data]
"jetfuelburn.data" = ["**/*.csv", "**/*.json"]

[tool.setuptools.dynamic]
version = {attr = "jetfuelburn.__version__"} 
readme = {file = "README.md"}

[tool.pytest.ini_options]
testpaths = ["tests/*.py"] 